# rosneft_dashboard

./: .gitignore  pyproject.toml  setup.cfg
src/: app.py  read_segy.py  settings.py
src/network/: data_preparation.py  dataset.py  read_segy.py  train.py  unet.py
src/network/datapreparation/: transform.py
src/network/deeplabv3plus/: aspp.py  deeplabv3_3d.py  resnet.py
src/network/unet3d/: unet3d256.py
src/pages/: second_page.py  slice_view.py
src/ui/: app.py  index.py  read_segy.py  utils.py
src/ui/callbacks/: __init__.py  dataset.py  slice_view.py  training.py
src/ui/pages/: __init__.py  dataset.py  prediction.py  slice_view.py  training.py
src/ui/tasks/: segmentation_task.py
