[tool.poetry]
name = "rosneft-dashboard"
version = "0.1.0"
description = ""
authors = ["Tsyrenzhapov Ayur <a.zh.tsyrenzhapov@gmail.com>"]
readme = "README.md"
packages = [{include = "rosneft_dashboard"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
dash = "^2.8.1"
segyio = "^1.9.10"
dash-bootstrap-components = "^1.4.0"
wemake-python-styleguide = "^0.17.0"
dash-slicer = "^0.3.0"
dash-labs = "^1.2.0"
tensorboard = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
